tests/paczka1/fuzzy1/80825348.err
Error in line 7: S627 A161 59,9
Error in line 15: GFQhz8n A161 72,0
Error in line 12: Dqq1uFPX S315 61,1
Error in line 14: S627 A297 48,4
Error in line 23: Dqq1uFPX A297 96,2
Error in line 24: TsoLJK A297 14,8
Error in line 20: GFQhz8n S315 97,8
Error in line 37: jdwZ S627 6,7
